2004-06-03  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* disp_soap_proc.adb:
	New procedure with code taken from disp_soap.adb.

	* disp_soap.adb:
	Only call to disp_soap_proc.adb.

	* makefile, disp_soap_sec.adb, disp_soap_sec.out:
	New regression test, the same like disp_soap, but over SSL.

	* auth.adb:
	Check for correct nonce.

	* nvect.ads:
	Do not use AWS.Digest prefix for "=".

2004-06-02  Pascal Obry  <pascal@obry.org>

	* makefile:
	(RT_STD): Add nonce.

	* nonce.adb, nonce.out, nvect.ads:
	Initial revision.

2004-06-02  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* makefile:
	Move xmlt test to RT_SOAP section.

2004-06-02  Pascal Obry  <pascal@obry.org>

	* xmlt_proc.adb:
	(With_URI): Remove variable as it is not used. Add parameters mode.

2004-06-01  Pascal Obry  <pascal@obry.org>

	* xmlt_proc.adb:
	Add header.

	* xmlt_sec.adb, xmlt.adb:
	Add header and CVS tag.

2004-06-01  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* xmlt_proc.adb, xmlt.adb, xmlt.out, xmlt_sec.adb, xmlt_sec.out,
	  makefile:
	New regression tests.

	* huge_response_sec.adb, huge_response_sec.out:
	New regtest for huge response over secure connection.

	* huge_response_proc.adb:
	Common code for huge_response_sec and huge_response tests.

	* huge_response.adb:
	Use huge_response_proc.adb.

	* makefile:
	Add huge_response_sec.

2004-05-31  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* makefile:
	Add ../xsrc to include directories.

2004-05-29  Pascal Obry  <pascal@obry.org>

	* check_mem.adb:
	Set exit status to Failure if there is a problem with this
	 test. This ensure that the makefile will detect such problem.

2004-05-28  Pascal Obry  <pascal@obry.org>

	* check_mem.adb:
	Allow 4 seconds by iteration to complete jobs. This should avoid the
	 timeout in standard case.

	* afile.adb:
	Revert previous check-in.

2004-05-28  Pascal Obry  <pascal@obry.org>

	* check_mem.adb:
	Revert previous check-in. It is not equivalent as it has removed
	 the time limit allowed to complete the jobs.
